Primera prueba, tira pantalla blanca de la actividad repeating y al parecer no inicializa el notificacion

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".repeatingAlarm"></activity>
+        <activity android:name=".notificacion"></activity>
     </application>
 
 </manifest>
